<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/restore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restore" android:layout_marginLeft="15sp" android:layout_marginTop="100sp" android:layout_marginRight="15sp"/>
    <Button android:id="@+id/github" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/git" android:layout_marginLeft="15sp" android:layout_marginTop="15sp" android:layout_marginRight="15sp" android:layout_gravity="center"/>       
    <Button android:id="@+id/xda" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/xda" android:layout_marginLeft="15sp" android:layout_marginTop="15sp" android:layout_marginRight="15sp" android:layout_gravity="center"/>
</LinearLayout>
